--- a/cocosstudio/character/daigoro.plist
+++ b/cocosstudio/character/daigoro.plist
@@ -7,7 +7,7 @@
 			<key>daigoro_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{96,1921},{21,33}}</string>
+				<string>{{0,1788},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>daigoro_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{29,1881},{22,33}}</string>
+				<string>{{0,1449},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>daigoro_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{51,1950},{22,33}}</string>
+				<string>{{0,1483},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>daigoro_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{75,1887},{21,33}}</string>
+				<string>{{0,1754},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>daigoro_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{74,1853},{21,33}}</string>
+				<string>{{0,1720},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>daigoro_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{74,1989},{21,33}}</string>
+				<string>{{0,1686},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>daigoro_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{96,1989},{21,33}}</string>
+				<string>{{0,1856},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>daigoro_2_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{51,1984},{22,32}}</string>
+				<string>{{0,1517},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>daigoro_2_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{28,1916},{24,33}}</string>
+				<string>{{0,1382},{24,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>daigoro_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{96,1955},{21,33}}</string>
+				<string>{{0,1822},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>daigoro_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{52,1853},{21,33}}</string>
+				<string>{{0,1550},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>daigoro_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{53,1887},{21,33}}</string>
+				<string>{{0,1584},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>daigoro_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{74,1921},{21,33}}</string>
+				<string>{{0,1618},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>daigoro_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{74,1955},{21,33}}</string>
+				<string>{{0,1652},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>daigoro_a_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1950},{27,34}}</string>
+				<string>{{0,1279},{27,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>daigoro_a_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1881},{28,34}}</string>
+				<string>{{0,1210},{28,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>daigoro_a_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{28,1950},{22,32}}</string>
+				<string>{{0,1416},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -245,7 +245,7 @@
 			<key>daigoro_a_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{26,1985},{24,33}}</string>
+				<string>{{0,1348},{24,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -259,7 +259,7 @@
 			<key>daigoro_a_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1985},{25,33}}</string>
+				<string>{{0,1314},{25,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +273,7 @@
 			<key>daigoro_a_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1916},{27,33}}</string>
+				<string>{{0,1245},{27,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -287,7 +287,7 @@
 			<key>daigoro_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1332,0},{443,1171}}</string>
+				<string>{{782,0},{443,1171}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -301,7 +301,7 @@
 			<key>daigoro_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1332,0},{443,1171}}</string>
+				<string>{{782,0},{443,1171}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -315,13 +315,13 @@
 			<key>daigoro_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1172},{443,680}}</string>
+				<string>{{782,0},{443,1171}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{210,14},{443,680}}</string>
+				<string>{{210,14},{443,1171}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -329,7 +329,7 @@
 			<key>daigoro_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{888,0},{443,1171}}</string>
+				<string>{{1670,0},{443,1171}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -343,7 +343,7 @@
 			<key>daigoro_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{443,1171}}</string>
+				<string>{{1226,0},{443,1171}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -357,7 +357,7 @@
 			<key>daigoro_s_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1776,0},{308,1181}}</string>
+				<string>{{2558,0},{308,1181}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -371,7 +371,7 @@
 			<key>daigoro_s_6.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{2085,0},{307,1181}}</string>
+				<string>{{2867,0},{307,1181}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -385,7 +385,7 @@
 			<key>daigoro_s_7.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{444,0},{443,1171}}</string>
+				<string>{{2114,0},{443,1171}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -396,10 +396,24 @@
 				<string>{800,1200}</string>
 			</dict>
 
+			<key>daigoro_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{781,936}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{14,124},{781,936}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
 			<key>effect_kick.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1853},{38,27}}</string>
+				<string>{{0,1182},{38,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
