--- a/cocosstudio/character/dandan.plist
+++ b/cocosstudio/character/dandan.plist
@@ -7,7 +7,7 @@
 			<key>dandan_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1361},{21,32}}</string>
+				<string>{{0,3660},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>dandan_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1262},{22,32}}</string>
+				<string>{{0,3594},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>dandan_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1295},{22,32}}</string>
+				<string>{{0,3495},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>dandan_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1460},{20,32}}</string>
+				<string>{{0,3825},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>dandan_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1427},{20,32}}</string>
+				<string>{{0,3726},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>dandan_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1493},{20,32}}</string>
+				<string>{{0,3693},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>dandan_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1394},{20,32}}</string>
+				<string>{{0,3759},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>dandan_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1559},{20,32}}</string>
+				<string>{{0,3792},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>dandan_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1526},{20,32}}</string>
+				<string>{{0,3858},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>dandan_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1328},{21,32}}</string>
+				<string>{{0,3627},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>dandan_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1229},{22,32}}</string>
+				<string>{{0,3528},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>dandan_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1196},{22,32}}</string>
+				<string>{{0,3561},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>dandan_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{977,0},{439,1133}}</string>
+				<string>{{0,2361},{439,1133}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>dandan_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{977,0},{439,1133}}</string>
+				<string>{{0,2361},{439,1133}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>dandan_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{536,1195}}</string>
+				<string>{{0,1165},{536,1195}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,13 +217,27 @@
 			<key>dandan_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{537,0},{439,1133}}</string>
+				<string>{{440,2361},{439,1133}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
 				<string>{{177,52},{439,1133}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>dandan_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{740,1164}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{13,14},{740,1164}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -235,7 +249,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{2048,2048}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>dandan.png</string>
 			</dict>
