--- a/cocosstudio/character/magoichi.plist
+++ b/cocosstudio/character/magoichi.plist
@@ -7,7 +7,7 @@
 			<key>magoichi_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,4023},{21,32}}</string>
+				<string>{{0,1549},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>magoichi_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3759},{22,32}}</string>
+				<string>{{0,1384},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>magoichi_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3726},{22,32}}</string>
+				<string>{{0,1417},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>magoichi_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3990},{21,32}}</string>
+				<string>{{0,1648},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>magoichi_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3957},{21,32}}</string>
+				<string>{{0,1615},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>magoichi_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3924},{21,32}}</string>
+				<string>{{0,1582},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>magoichi_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3891},{21,32}}</string>
+				<string>{{0,1714},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>magoichi_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3858},{21,32}}</string>
+				<string>{{0,1681},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>magoichi_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3825},{21,32}}</string>
+				<string>{{0,1483},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>magoichi_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3792},{21,32}}</string>
+				<string>{{0,1516},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>magoichi_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,4056},{21,32}}</string>
+				<string>{{0,1747},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>magoichi_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{22,3792},{21,32}}</string>
+				<string>{{0,1450},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>magoichi_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2342},{394,1170}}</string>
+				<string>{{1315,0},{394,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>magoichi_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2342},{394,1170}}</string>
+				<string>{{1315,0},{394,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>magoichi_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{410,1170}}</string>
+				<string>{{493,0},{410,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>magoichi_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1171},{410,1170}}</string>
+				<string>{{904,0},{410,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>magoichi_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2342},{394,1170}}</string>
+				<string>{{1315,0},{394,1170}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -242,10 +242,24 @@
 				<string>{800,1200}</string>
 			</dict>
 
+			<key>magoichi_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{492,1073}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{139,81},{492,1073}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
 			<key>swim_magoichi_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3698},{25,27}}</string>
+				<string>{{0,1250},{25,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -259,7 +273,7 @@
 			<key>swim_magoichi_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3698},{25,27}}</string>
+				<string>{{0,1250},{25,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +287,7 @@
 			<key>swim_magoichi_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3593},{25,25}}</string>
+				<string>{{0,1224},{25,25}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -287,7 +301,7 @@
 			<key>swim_magoichi_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3566},{25,26}}</string>
+				<string>{{0,1197},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -301,7 +315,7 @@
 			<key>swim_magoichi_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3566},{25,26}}</string>
+				<string>{{0,1197},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -315,7 +329,7 @@
 			<key>swim_magoichi_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3540},{25,25}}</string>
+				<string>{{0,1171},{25,25}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -329,7 +343,7 @@
 			<key>swim_magoichi_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3513},{25,26}}</string>
+				<string>{{0,1357},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -343,7 +357,7 @@
 			<key>swim_magoichi_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3513},{25,26}}</string>
+				<string>{{0,1357},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -357,7 +371,7 @@
 			<key>swim_magoichi_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3619},{25,25}}</string>
+				<string>{{0,1278},{25,25}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -371,7 +385,7 @@
 			<key>swim_magoichi_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3645},{25,26}}</string>
+				<string>{{0,1304},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -385,7 +399,7 @@
 			<key>swim_magoichi_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3672},{25,25}}</string>
+				<string>{{0,1331},{25,25}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -399,7 +413,7 @@
 			<key>swim_magoichi_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3645},{25,26}}</string>
+				<string>{{0,1304},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -417,7 +431,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{512,4096}</string>
+			<string>{2048,2048}</string>
 			<key>textureFileName</key>
 			<string>magoichi.png</string>
 			</dict>
