--- a/cocosstudio/character/manaka.plist
+++ b/cocosstudio/character/manaka.plist
@@ -7,7 +7,7 @@
 			<key>manaka_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1642},{24,34}}</string>
+				<string>{{0,3937},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>manaka_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1607},{24,34}}</string>
+				<string>{{0,3902},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>manaka_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1572},{25,34}}</string>
+				<string>{{0,3867},{25,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>manaka_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1432},{26,34}}</string>
+				<string>{{0,3727},{26,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>manaka_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1362},{26,34}}</string>
+				<string>{{0,3657},{26,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>manaka_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1502},{26,34}}</string>
+				<string>{{0,3797},{26,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>manaka_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1467},{26,34}}</string>
+				<string>{{0,3762},{26,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>manaka_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1397},{26,34}}</string>
+				<string>{{0,3692},{26,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>manaka_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1537},{26,34}}</string>
+				<string>{{0,3832},{26,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>manaka_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1677},{21,33}}</string>
+				<string>{{0,3972},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>manaka_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1711},{20,33}}</string>
+				<string>{{0,4006},{20,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>manaka_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1745},{20,33}}</string>
+				<string>{{0,4040},{20,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>manaka_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{445,1141}}</string>
+				<string>{{0,1153},{445,1141}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>manaka_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{445,1141}}</string>
+				<string>{{0,1153},{445,1141}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>manaka_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{446,0},{445,1141}}</string>
+				<string>{{0,2295},{445,1141}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>manaka_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{892,0},{445,1141}}</string>
+				<string>{{446,1153},{445,1141}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>manaka_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1338,0},{445,1141}}</string>
+				<string>{{446,2295},{445,1141}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -242,10 +242,24 @@
 				<string>{800,1200}</string>
 			</dict>
 
+			<key>manaka_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{659,1152}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{94,29},{659,1152}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
 			<key>swim_manaka_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1169},{27,27}}</string>
+				<string>{{0,3437},{27,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -259,7 +273,7 @@
 			<key>swim_manaka_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1169},{27,27}}</string>
+				<string>{{0,3437},{27,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +287,7 @@
 			<key>swim_manaka_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1142},{27,26}}</string>
+				<string>{{0,3465},{27,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -287,7 +301,7 @@
 			<key>swim_manaka_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1252},{26,27}}</string>
+				<string>{{0,3547},{26,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -301,7 +315,7 @@
 			<key>swim_manaka_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1252},{26,27}}</string>
+				<string>{{0,3547},{26,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -315,7 +329,7 @@
 			<key>swim_manaka_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1307},{26,26}}</string>
+				<string>{{0,3630},{26,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -329,7 +343,7 @@
 			<key>swim_manaka_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1334},{26,27}}</string>
+				<string>{{0,3575},{26,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -343,7 +357,7 @@
 			<key>swim_manaka_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1334},{26,27}}</string>
+				<string>{{0,3575},{26,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -357,7 +371,7 @@
 			<key>swim_manaka_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1280},{26,26}}</string>
+				<string>{{0,3603},{26,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -371,7 +385,7 @@
 			<key>swim_manaka_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1224},{27,27}}</string>
+				<string>{{0,3492},{27,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -385,7 +399,7 @@
 			<key>swim_manaka_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1224},{27,27}}</string>
+				<string>{{0,3492},{27,27}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -399,7 +413,7 @@
 			<key>swim_manaka_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1197},{27,26}}</string>
+				<string>{{0,3520},{27,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -417,7 +431,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{2048,2048}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>manaka.png</string>
 			</dict>
