--- a/cocosstudio/character/ranmaru.plist
+++ b/cocosstudio/character/ranmaru.plist
@@ -7,7 +7,7 @@
 			<key>ranmaru_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,4027},{23,34}}</string>
+				<string>{{0,1771},{23,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>ranmaru_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3396},{29,34}}</string>
+				<string>{{0,1140},{29,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>ranmaru_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3749},{25,34}}</string>
+				<string>{{0,1493},{25,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>ranmaru_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3924},{24,34}}</string>
+				<string>{{0,1668},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>ranmaru_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3609},{27,34}}</string>
+				<string>{{0,1353},{27,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>ranmaru_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3854},{24,34}}</string>
+				<string>{{0,1598},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>ranmaru_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3889},{24,34}}</string>
+				<string>{{0,1633},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>ranmaru_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3574},{27,34}}</string>
+				<string>{{0,1318},{27,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>ranmaru_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3784},{24,34}}</string>
+				<string>{{0,1528},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>ranmaru_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3959},{23,34}}</string>
+				<string>{{0,1703},{23,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>ranmaru_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3679},{25,34}}</string>
+				<string>{{0,1423},{25,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>ranmaru_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3819},{24,34}}</string>
+				<string>{{0,1563},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>ranmaru__a_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3994},{23,32}}</string>
+				<string>{{0,1738},{23,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>ranmaru_a_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{24,3959},{23,34}}</string>
+				<string>{{0,1806},{23,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>ranmaru_a_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3539},{27,34}}</string>
+				<string>{{0,1283},{27,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>ranmaru_a_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3644},{25,34}}</string>
+				<string>{{0,1388},{25,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>ranmaru_a_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3504},{27,34}}</string>
+				<string>{{0,1248},{27,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -245,7 +245,7 @@
 			<key>ranmaru_a_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3469},{28,34}}</string>
+				<string>{{0,1175},{28,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -259,7 +259,7 @@
 			<key>ranmaru_a_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3714},{25,34}}</string>
+				<string>{{0,1458},{25,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +273,7 @@
 			<key>ranmaru_a_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3431},{28,37}}</string>
+				<string>{{0,1210},{28,37}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -287,7 +287,7 @@
 			<key>ranmaru_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2264},{454,1131}}</string>
+				<string>{{2543,0},{454,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -301,7 +301,7 @@
 			<key>ranmaru_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2264},{454,1131}}</string>
+				<string>{{2543,0},{454,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -315,7 +315,7 @@
 			<key>ranmaru_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{454,1131}}</string>
+				<string>{{2088,0},{454,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -329,7 +329,7 @@
 			<key>ranmaru_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{455,0},{454,1131}}</string>
+				<string>{{723,0},{454,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -343,7 +343,7 @@
 			<key>ranmaru_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{455,1132},{454,1131}}</string>
+				<string>{{1633,0},{454,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -357,7 +357,7 @@
 			<key>ranmaru_s_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1132},{454,1131}}</string>
+				<string>{{1178,0},{454,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -371,13 +371,27 @@
 			<key>ranmaru_s_6.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{455,2264},{386,1195}}</string>
+				<string>{{2998,0},{386,1195}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
 				<string>{{243,1},{386,1195}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>ranmaru_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{722,1139}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{63,5},{722,1139}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -389,7 +403,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{1024,4096}</string>
+			<string>{4096,2048}</string>
 			<key>textureFileName</key>
 			<string>ranmaru.png</string>
 			</dict>
