--- a/cocosstudio/character/syuka.plist
+++ b/cocosstudio/character/syuka.plist
@@ -7,7 +7,7 @@
 			<key>syuka_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1306},{31,29}}</string>
+				<string>{{0,3327},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>syuka_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1276},{31,29}}</string>
+				<string>{{0,3297},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>syuka_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1336},{31,29}}</string>
+				<string>{{0,3387},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>syuka_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1426},{25,29}}</string>
+				<string>{{0,3477},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>syuka_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1486},{25,29}}</string>
+				<string>{{0,3537},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>syuka_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1396},{25,29}}</string>
+				<string>{{0,3447},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>syuka_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1366},{25,29}}</string>
+				<string>{{0,3417},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>syuka_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1456},{25,29}}</string>
+				<string>{{0,3507},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>syuka_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1516},{25,29}}</string>
+				<string>{{0,3567},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>syuka_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1246},{31,29}}</string>
+				<string>{{0,3357},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>syuka_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1216},{31,29}}</string>
+				<string>{{0,3267},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>syuka_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1186},{31,29}}</string>
+				<string>{{0,3237},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,13 +175,13 @@
 			<key>syuka_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{505,0},{504,1185}}</string>
+				<string>{{0,2153},{439,1083}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{154,0},{504,1185}}</string>
+				<string>{{154,102},{439,1083}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -189,13 +189,13 @@
 			<key>syuka_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{505,0},{504,1185}}</string>
+				<string>{{0,2153},{439,1083}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{154,0},{504,1185}}</string>
+				<string>{{154,102},{439,1083}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -203,13 +203,13 @@
 			<key>syuka_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1010,0},{504,1185}}</string>
+				<string>{{440,1069},{439,1083}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{154,0},{504,1185}}</string>
+				<string>{{154,102},{439,1083}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -217,13 +217,13 @@
 			<key>syuka_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1515,0},{504,1185}}</string>
+				<string>{{440,2153},{439,1083}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{154,0},{504,1185}}</string>
+				<string>{{154,102},{439,1083}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -231,13 +231,27 @@
 			<key>syuka_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{504,1185}}</string>
+				<string>{{0,1069},{439,1083}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{154,0},{504,1185}}</string>
+				<string>{{154,102},{439,1083}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>syuka_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{623,1068}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{72,112},{623,1068}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -249,7 +263,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{2048,2048}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>syuka.png</string>
 			</dict>
