--- a/cocosstudio/character/yuki.plist
+++ b/cocosstudio/character/yuki.plist
@@ -7,7 +7,7 @@
 			<key>swim_yuki_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3148},{25,26}}</string>
+				<string>{{0,1839},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>swim_yuki_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3148},{25,26}}</string>
+				<string>{{0,1839},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>swim_yuki_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3123},{25,24}}</string>
+				<string>{{0,1890},{25,24}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>swim_yuki_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3252},{25,25}}</string>
+				<string>{{0,2017},{25,25}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>swim_yuki_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3252},{25,25}}</string>
+				<string>{{0,2017},{25,25}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>swim_yuki_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3303},{25,23}}</string>
+				<string>{{0,1915},{25,23}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>swim_yuki_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3202},{25,25}}</string>
+				<string>{{0,1939},{25,25}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>swim_yuki_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3202},{25,25}}</string>
+				<string>{{0,1939},{25,25}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>swim_yuki_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3228},{25,23}}</string>
+				<string>{{0,1866},{25,23}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>swim_yuki_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3175},{25,26}}</string>
+				<string>{{0,1965},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>swim_yuki_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3175},{25,26}}</string>
+				<string>{{0,1965},{25,26}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>swim_yuki_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3278},{25,24}}</string>
+				<string>{{0,1992},{25,24}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>yuki_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3545},{21,30}}</string>
+				<string>{{48,1934},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>yuki_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3637},{21,30}}</string>
+				<string>{{26,1965},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>yuki_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3514},{21,30}}</string>
+				<string>{{49,1870},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>yuki_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3699},{20,30}}</string>
+				<string>{{70,1962},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>yuki_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3823},{20,30}}</string>
+				<string>{{70,1931},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -245,7 +245,7 @@
 			<key>yuki_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3761},{20,30}}</string>
+				<string>{{91,1901},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -259,7 +259,7 @@
 			<key>yuki_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3854},{20,30}}</string>
+				<string>{{92,1870},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +273,7 @@
 			<key>yuki_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3916},{20,30}}</string>
+				<string>{{71,1870},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -287,7 +287,7 @@
 			<key>yuki_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3885},{20,30}}</string>
+				<string>{{93,1839},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -301,7 +301,7 @@
 			<key>yuki_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3606},{21,30}}</string>
+				<string>{{48,1995},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -315,7 +315,7 @@
 			<key>yuki_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3422},{21,30}}</string>
+				<string>{{26,1934},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -329,7 +329,7 @@
 			<key>yuki_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3453},{21,30}}</string>
+				<string>{{26,1996},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -343,7 +343,7 @@
 			<key>yuki_a__0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3545},{21,30}}</string>
+				<string>{{48,1934},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -357,7 +357,7 @@
 			<key>yuki_a__0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3484},{21,29}}</string>
+				<string>{{48,1965},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -371,7 +371,7 @@
 			<key>yuki_a__0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3576},{21,29}}</string>
+				<string>{{49,1901},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -385,7 +385,7 @@
 			<key>yuki_a__1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3699},{20,30}}</string>
+				<string>{{70,1962},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -399,7 +399,7 @@
 			<key>yuki_a__1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3730},{20,30}}</string>
+				<string>{{70,1993},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -413,7 +413,7 @@
 			<key>yuki_a__1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3668},{21,30}}</string>
+				<string>{{50,1839},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -427,7 +427,7 @@
 			<key>yuki_a__2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3854},{20,30}}</string>
+				<string>{{92,1870},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -441,7 +441,7 @@
 			<key>yuki_a__2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3792},{20,30}}</string>
+				<string>{{72,1839},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -455,7 +455,7 @@
 			<key>yuki_a__2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3358},{22,30}}</string>
+				<string>{{26,1870},{22,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -469,7 +469,7 @@
 			<key>yuki_a__3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3606},{21,30}}</string>
+				<string>{{48,1995},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -483,7 +483,7 @@
 			<key>yuki_a__3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3327},{23,30}}</string>
+				<string>{{26,1839},{23,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -497,7 +497,7 @@
 			<key>yuki_a__3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3389},{22,32}}</string>
+				<string>{{26,1901},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -511,13 +511,13 @@
 			<key>yuki_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2082},{364,1040}}</string>
+				<string>{{0,790},{449,1048}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{248,145},{364,1040}}</string>
+				<string>{{189,137},{449,1048}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -525,13 +525,13 @@
 			<key>yuki_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2082},{364,1040}}</string>
+				<string>{{0,790},{449,1048}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{248,145},{364,1040}}</string>
+				<string>{{189,137},{449,1048}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -539,13 +539,13 @@
 			<key>yuki_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1041},{364,1040}}</string>
+				<string>{{450,790},{449,1048}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{248,145},{364,1040}}</string>
+				<string>{{189,137},{449,1048}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -553,13 +553,27 @@
 			<key>yuki_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{364,1040}}</string>
+				<string>{{900,0},{449,1048}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{248,145},{364,1040}}</string>
+				<string>{{189,137},{449,1048}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yuki_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{603,789}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{30,218},{603,789}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -571,7 +585,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{512,4096}</string>
+			<string>{2048,2048}</string>
 			<key>textureFileName</key>
 			<string>yuki.png</string>
 			</dict>
